[tool.poetry]
name = "ansible-github-config"
version = "0.1.0"
description = ""
authors = ["Joey Espinosa <@particledecay>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygithub = "^1.51"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
